Refactor how we wire up platform services
Now the control flow for wiring up platform services starts in the
platform-specific code. Previously we started in shared code, which was
imposing constraints on the startup sequence for all platforms. Now that we
start in platform-specific code, we'll be able to add better support for Mojo
in a future patch.

--- a/engine/src/flutter/sky/services/engine/BUILD.gn
+++ b/engine/src/flutter/sky/services/engine/BUILD.gn
@@ -11,6 +11,7 @@ mojom("interfaces") {
   ]
 
   deps = [
+    "//mojo/public/interfaces/application",
     "//mojo/services/asset_bundle/interfaces",
     "//sky/services/pointer:interfaces",
   ]
