--- a/engine/src/flutter/sky/shell/platform/mac/Info.plist
+++ b/engine/src/flutter/sky/shell/platform/mac/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Sky</string>
+	<string>Flutter</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -25,7 +25,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>10.6</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2015 The Chromium Authors. All rights reserved.</string>
+	<string>Copyright 2015 The Flutter Authors. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>sky_mac</string>
 	<key>NSPrincipalClass</key>
