Bring sky_shell.mojo up to feature parity with sky_viewer.mojo
I believe this patch implements all the remaining features from
sky_viewer.mojo.

--- a/engine/src/flutter/sky/services/engine/BUILD.gn
+++ b/engine/src/flutter/sky/services/engine/BUILD.gn
@@ -13,6 +13,7 @@ mojom("interfaces") {
   deps = [
     "//mojo/public/interfaces/application",
     "//mojo/services/asset_bundle/interfaces",
+    "//mojo/services/service_registry/interfaces",
     "//sky/services/pointer:interfaces",
   ]
 }
