Scrollable widgets don't fling in MojoShell
There's some confusion over the units for time_stamp. This patch works around
the issue. I've filed a bug (https://github.com/domokit/mojo/issues/541) to
figure out the right fix.

Also, rename the final target to flutter.mojo, which is a more descriptive
name.

--- a/engine/src/flutter/sky/shell/platform/mojo/BUILD.gn
+++ b/engine/src/flutter/sky/shell/platform/mojo/BUILD.gn
@@ -6,7 +6,7 @@ import("//mojo/public/mojo_application.gni")
 import("//mojo/public/tools/bindings/mojom.gni")
 
 mojo_native_application("mojo") {
-  output_name = "sky_shell"
+  output_name = "flutter"
 
   sources = [
     "content_handler_impl.cc",
