Use `dart_host_toolchain` when building host binaries that depend on Dart

--- a/engine/src/flutter/sky/engine/bindings/BUILD.gn
+++ b/engine/src/flutter/sky/engine/bindings/BUILD.gn
@@ -60,7 +60,7 @@ source_set("bindings") {
 
 action("generate_snapshot_bin") {
   deps = [
-    "//dart/runtime/bin:gen_snapshot($host_toolchain)",
+    "//dart/runtime/bin:gen_snapshot($dart_host_toolchain)",
     ":generate_dart_ui",
   ]
   inputs = [
