--- a/engine/src/flutter/sky/BUILD.gn
+++ b/engine/src/flutter/sky/BUILD.gn
@@ -2,6 +2,8 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+import("//sky/engine/bindings/bindings.gni")
+
 group("sky") {
   testonly = true
 
@@ -10,8 +12,11 @@ group("sky") {
     "//sky/engine/wtf:unittests($host_toolchain)",
     "//sky/packages",
     "//sky/shell",
-    "//sky/tools/sky_snapshot($host_toolchain)",
   ]
+
+  if (dart_host_toolchain == host_toolchain) {
+    deps += [ "//sky/tools/sky_snapshot($dart_host_toolchain)" ]
+  }
 
   if (is_linux || is_android) {
     deps += [ "//sky/shell/platform/mojo" ]
