Add support for IME on mojo/Linux

--- a/engine/src/flutter/mojo/services/keyboard/interfaces/BUILD.gn
+++ b/engine/src/flutter/mojo/services/keyboard/interfaces/BUILD.gn
@@ -9,4 +9,10 @@ mojom("interfaces") {
   sources = [
     "keyboard.mojom",
   ]
+
+  import_dirs = [ get_path_info("../../", "abspath") ]
+
+  deps = [
+    "../../native_viewport/interfaces",
+  ]
 }
