--- a/engine/src/flutter/sky/engine/bindings/BUILD.gn
+++ b/engine/src/flutter/sky/engine/bindings/BUILD.gn
@@ -32,6 +32,7 @@ source_set("bindings") {
   deps = [
     "//base",
     "//dart/runtime:libdart",
+    "//dart/runtime/bin:embedded_dart_io",
     "//mojo/public/c/system",
     "//mojo/public/cpp/system",
     "//mojo/public/platform/dart:mojo_internal_impl",
