--- a/engine/src/flutter/.travis.yml
+++ b/engine/src/flutter/.travis.yml
@@ -1,14 +1,6 @@
-language: cpp
+language: dart
+dart: stable
 sudo: false
-compiler:
-  - gcc
-addons:
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    packages:
-    - gcc-4.8
-    - g++-4.8
 before_script:
   - ./travis/setup.sh
 script:
