--- a/engine/src/flutter/sky/shell/BUILD.gn
+++ b/engine/src/flutter/sky/shell/BUILD.gn
@@ -52,6 +52,7 @@ source_set("common") {
     "//sky/engine/wtf",
     "//sky/services/engine:interfaces",
     "//sky/services/pointer:interfaces",
+    "//sky/services/rasterizer:interfaces",
     "//sky/shell/dart",
     "//ui/gfx",
     "//ui/gfx/geometry",
