--- a/engine/src/flutter/sky/packages/sky_services/BUILD.gn
+++ b/engine/src/flutter/sky/packages/sky_services/BUILD.gn
@@ -29,6 +29,7 @@ dart_pkg("sky_services") {
     "//sky/services/media:interfaces",
     "//sky/services/pointer:interfaces",
     "//sky/services/raw_keyboard:interfaces",
+    "//sky/services/semantics:interfaces",
     "//sky/services/updater:interfaces",
   ]
 }
