Update to mojo b7c8cb12f05d3bc1351e65a4f9a84c5d1bcd1704

--- a/engine/src/flutter/mojo/android/BUILD.gn
+++ b/engine/src/flutter/mojo/android/BUILD.gn
@@ -124,6 +124,7 @@ shared_library("mojo_java_unittests") {
     ":system_java_jni_headers",
     "//base",
     "//base/test/:test_support",
+    "//mojo/edk/base_edk",
     "//mojo/edk/system",
     "//mojo/environment:chromium",
     "//mojo/message_pump",
