--- a/engine/src/flutter/mojo/edk/base_edk/BUILD.gn
+++ b/engine/src/flutter/mojo/edk/base_edk/BUILD.gn
@@ -6,6 +6,9 @@ import("../mojo_edk.gni")
 
 mojo_edk_source_set("base_edk") {
   sources = [
+    "io_thread.cc",
+    "platform_handle_watcher_impl.cc",
+    "platform_handle_watcher_impl.h",
     "platform_message_loop_for_io_impl.cc",
     "platform_message_loop_for_io_impl.h",
     "platform_message_loop_impl.cc",
@@ -40,8 +43,11 @@ mojo_edk_source_set("test_base_edk") {
 
 mojo_edk_unittests("mojo_edk_base_edk_unittests") {
   sources = [
+    "io_thread_unittest.cc",
     "message_loop_test_helper.cc",
     "message_loop_test_helper.h",
+    "platform_handle_watcher_test_helper.cc",
+    "platform_handle_watcher_test_helper.h",
     "platform_message_loop_for_io_impl_unittest.cc",
     "platform_message_loop_impl_unittest.cc",
     "test_message_loops_unittest.cc",
