--- a/engine/src/flutter/mojo/edk/platform/BUILD.gn
+++ b/engine/src/flutter/mojo/edk/platform/BUILD.gn
@@ -6,12 +6,14 @@ import("../mojo_edk.gni")
 
 mojo_edk_source_set("platform") {
   sources = [
+    "io_thread.h",
     "message_loop.h",
-    "message_loop_for_io.h",
     "platform_handle.cc",
     "platform_handle.h",
+    "platform_handle_watcher.h",
     "scoped_platform_handle.h",
     "task_runner.h",
+    "thread.h",
   ]
 
   mojo_sdk_public_deps = [ "mojo/public/cpp/system" ]
