Revert to libjpeg_turbo
We had switched to libjpeg, but libjpeg was failing to decode images when
built with the defines in our .gn files

--- a/engine/src/flutter/sky/engine/platform/BUILD.gn
+++ b/engine/src/flutter/sky/engine/platform/BUILD.gn
@@ -516,12 +516,12 @@ source_set("platform") {
     "//third_party/icu",
     "//third_party/libpng",
     "//third_party/qcms",
-    "//third_party/libjpeg",
+    "//third_party:jpeg",
   ]
 
   forward_dependent_configs_from = [
     "//skia",
-    "//third_party/libjpeg",
+    "//third_party:jpeg",
     "//third_party/iccjpeg",
     "//third_party/libpng",
     "//third_party/qcms",
