--- a/engine/src/flutter/sky/engine/bindings/BUILD.gn
+++ b/engine/src/flutter/sky/engine/bindings/BUILD.gn
@@ -40,7 +40,6 @@ source_set("bindings") {
     "//sky/engine/platform:platform",
     "//sky/engine/tonic",
     "//sky/engine/wtf",
-    ":generated_bindings",
   ]
 
   # On iOS (device), precompiled snapshots contain the instruction buffer.
@@ -147,188 +146,6 @@ source_set("snapshot_cc") {
   ]
 }
 
-action("compute_interfaces_info_individual") {
-  sources = core_idl_files
-  script = "$bindings_scripts_dir/compute_interfaces_info_individual.py"
-  output_file = "$bindings_output_dir/InterfacesInfoIndividual.pickle"
-
-  # TODO(eseidel): This is no longer needed, could pass these as args.
-  file_list = "$target_gen_dir/${target_name}_file_list.txt"
-  write_file(file_list, rebase_path(sources, root_build_dir))
-
-  # TODO(eseidel): Use depfile instead of this manual list.
-  inputs = [ "$bindings_scripts_dir/utilities.py" ] + sources
-
-  outputs = [
-    file_list,
-    output_file,
-  ]
-
-  args = [
-    # TODO(eseidel): Remove component-dir, it is meaningless in sky.
-    "--component-dir",
-    "ignored",
-    "--idl-files-list",
-    rebase_path(file_list, root_build_dir),
-    "--interfaces-info-file",
-    rebase_path(output_file, root_build_dir),
-
-    # TODO(eseidel): only-if-changed is always true, remove
-    "--write-file-only-if-changed=1",
-  ]
-}
-
-interfaces_info_individual_path =
-    "$bindings_output_dir/InterfacesInfoIndividual.pickle"
-
-interfaces_info_overall_path =
-    "$bindings_output_dir/InterfacesInfoOverall.pickle"
-
-action("compute_interfaces_info_overall") {
-  script = "$bindings_scripts_dir/compute_interfaces_info_overall.py"
-
-  inputs = [
-    interfaces_info_individual_path,
-  ]
-  outputs = [
-    interfaces_info_overall_path,
-  ]
-
-  args = [
-    # TODO(eseidel): only-if-changed is always true, remove
-    "--write-file-only-if-changed=1",
-    "--",
-  ]
-  args += rebase_path(inputs, root_build_dir)
-  args += rebase_path(outputs, root_build_dir)
-
-  deps = [
-    ":compute_interfaces_info_individual",
-  ]
-}
-
-# This separate pre-caching step is required to use lex/parse table
-# caching in PLY, since PLY itself does not check if the cache is
-# valid, and thus may end up using a stale cache if this step hasn"t
-# been run to update it.
-#
-# This action"s dependencies *is* the cache validation.
-#
-# GYP version: scripts.gyp:cached_lex_yacc_tables
-action("cached_lex_yacc_tables") {
-  script = "scripts/blink_idl_parser.py"
-
-  inputs = idl_lexer_parser_files
-  outputs = [
-    "$bindings_output_dir/lextab.py",
-    "$bindings_output_dir/parsetab.pickle",
-  ]
-
-  args = [ rebase_path(bindings_output_dir, root_build_dir) ]
-}
-
-# Runs the idl_compiler script over a list of sources.
-#
-# Parameters:
-#   sources = list of IDL files to compile
-#   output_dir = string containing the directory to put the output files.
-template("idl_compiler") {
-  output_dir = invoker.output_dir
-
-  action_foreach(target_name) {
-    # TODO(brettw) GYP adds a "-S before the script name to skip "import site" to
-    # speed up startup. Figure out if we need this and do something similar (not
-    # really expressible in GN now).
-    script = "$bindings_scripts_dir/compiler.py"
-
-    inputs = idl_lexer_parser_files + idl_compiler_files
-    inputs += [
-      "scripts/templates/attributes_cpp.template",
-      "scripts/templates/callback_interface_cpp.template",
-      "scripts/templates/callback_interface_dart.template",
-      "scripts/templates/callback_interface_h.template",
-      "scripts/templates/interface_base_cpp.template",
-      "scripts/templates/interface_cpp.template",
-      "scripts/templates/interface_dart.template",
-      "scripts/templates/interface_h.template",
-      "scripts/templates/methods_cpp.template",
-    ]
-    inputs += [
-      "$bindings_output_dir/lextab.py",
-      "$bindings_output_dir/parsetab.pickle",
-
-      # "$bindings_output_dir/cached_jinja_templates.stamp",
-      "//sky/engine/bindings/IDLExtendedAttributes.txt",
-
-      # If the dependency structure or public interface info (e.g.,
-      # [ImplementedAs]) changes, we rebuild all files, since we"re not
-      # computing dependencies file-by-file in the build.
-      # This data is generally stable.
-      interfaces_info_overall_path,
-    ]
-
-    sources = invoker.sources
-    outputs = [
-      "$output_dir/Dart{{source_name_part}}.cpp",
-      "$output_dir/Dart{{source_name_part}}.h",
-      "$output_dir/{{source_name_part}}.dart",
-    ]
-
-    args = [
-      "--output-dir",
-      rebase_path(output_dir, root_build_dir),
-      "--interfaces-info",
-      rebase_path(interfaces_info_overall_path, root_build_dir),
-      "--write-file-only-if-changed=1",  # Always true for Ninja.
-      "{{source}}",
-    ]
-
-    deps = [
-      ":compute_interfaces_info_overall",
-      ":cached_lex_yacc_tables",
-
-      # ":cached_jinja_templates",
-    ]
-  }
-}
-
-idl_compiler("compile_idls") {
-  sources = core_idl_files
-  output_dir = bindings_output_dir
-}
-
-action("generate_dart_globals") {
-  sources = core_idl_files
-  script = "$bindings_scripts_dir/compiler.py"
-
-  file_list = "$target_gen_dir/${target_name}_file_list.txt"
-  write_file(file_list, rebase_path(sources, root_build_dir))
-
-  inputs = sources + idl_compiler_files
-  inputs += [
-    "scripts/templates/global_cpp.template",
-    "scripts/templates/global_h.template",
-  ]
-
-  outputs = [
-    file_list,
-    "$bindings_output_dir/DartGlobal.h",
-    "$bindings_output_dir/DartGlobal.cpp",
-  ]
-
-  args = [
-    "--output-directory",
-    rebase_path(bindings_output_dir, root_build_dir),
-    "--generate-globals",
-    rebase_path(bindings_output_dir, root_build_dir),
-    rebase_path(file_list, root_build_dir),
-  ]
-
-  deps = [
-    ":compile_idls",
-  ]
-}
-
 copy("copy_core_dart_files") {
   sources = core_dart_files
   outputs = [
@@ -337,14 +154,13 @@ copy("copy_core_dart_files") {
 }
 
 action("generate_dart_ui") {
-  sources = core_idl_files + core_dart_files
+  sources = core_dart_files
   script = "$bindings_scripts_dir/compiler.py"
 
   file_list = "$target_gen_dir/${target_name}_file_list.txt"
   write_file(file_list, rebase_path(sources, root_build_dir))
 
-  inputs =
-      sources + idl_compiler_files + [ "scripts/templates/dart_blink.template" ]
+  inputs = sources + [ "scripts/templates/dart_blink.template" ]
 
   outputs = [
     file_list,
@@ -361,36 +177,5 @@ action("generate_dart_ui") {
 
   deps = [
     ":copy_core_dart_files",
-    ":compile_idls",
   ]
-}
-
-source_set("generated_bindings") {
-  deps = [
-    "//base",
-    "//dart/runtime:libdart",
-    "//dart/runtime/vm:libdart_platform",
-    "//mojo/application",
-    "//mojo/public/c/system",
-    "//mojo/public/cpp/bindings",
-    "//mojo/public/cpp/system",
-    "//mojo/public/cpp/utility",
-    "//mojo/public/interfaces/application",
-    "//skia",
-    "//sky/engine/wtf",
-    "//third_party/iccjpeg",
-    "//third_party/libpng",
-    "//third_party/qcms",
-    "//third_party/zlib",
-    ":compile_idls",
-    ":generate_dart_globals",
-  ]
-
-  include_dirs = [
-    "..",
-    "$root_build_dir",
-  ]
-
-  sources = get_target_outputs(":compile_idls")
-  sources += get_target_outputs(":generate_dart_globals")
 }
