--- a/engine/src/flutter/sky/shell/BUILD.gn
+++ b/engine/src/flutter/sky/shell/BUILD.gn
@@ -136,6 +136,7 @@ if (is_android) {
       "//mojo/android:libsystem_java",
       "//mojo/edk/base_edk",
       "//mojo/edk/system",
+      "//sky/engine/bindings/jni",
       "//ui/gl",
       ":common",
       ":gpu_direct",
