--- a/engine/src/flutter/sky/engine/bindings/BUILD.gn
+++ b/engine/src/flutter/sky/engine/bindings/BUILD.gn
@@ -37,10 +37,6 @@ source_set("bindings") {
     "//sky/engine/wtf",
   ]
 
-  if (is_android) {
-    deps += [ "//sky/engine/bindings/jni" ]
-  }
-
   # On iOS (device), precompiled snapshots contain the instruction buffer.
   # Generation of the same requires all application specific script code to be
   # specified up front. In such cases, there can be no updater or generic
@@ -82,6 +78,7 @@ action("generate_snapshot_bin") {
   dart_ui_internals_path =
       rebase_path("//sky/engine/bindings/internals.dart")
   dart_ui_path = rebase_path("$bindings_output_dir/dart_ui.dart")
+  dart_jni_path = rebase_path("//sky/engine/bindings/jni/jni.dart")
 
   gen_snapshot_dir =
       get_label_info("//dart/runtime/bin:gen_snapshot($host_toolchain)",
@@ -104,6 +101,7 @@ action("generate_snapshot_bin") {
     "--url_mapping=dart:mojo.internal,$dart_mojo_internal_path",
     "--url_mapping=dart:ui,$dart_ui_path",
     "--url_mapping=dart:ui_internals,$dart_ui_internals_path",
+    "--url_mapping=dart:jni,$dart_jni_path",
   ]
 }
 
@@ -148,7 +146,6 @@ source_set("snapshot_cc") {
 copy("generate_dart_ui") {
   sources = [
     "dart_ui.dart",
-    "jni/jni.dart",
   ]
   sources += core_dart_files
 
