Experiment with caching rasterized layers
This patch adds back (and tweaks) some code that we previously removed
for caching rasterized layers. Now that our layerization code in the
framework is more sophisticated, we should be able to get more value out
of this mechanism.

--- a/engine/src/flutter/sky/compositor/BUILD.gn
+++ b/engine/src/flutter/sky/compositor/BUILD.gn
@@ -32,6 +32,8 @@ source_set("compositor") {
     "picture_layer.h",
     "picture_serializer.cc",
     "picture_serializer.h",
+    "raster_cache.cc",
+    "raster_cache.h",
     "statistics_layer.cc",
     "statistics_layer.h",
     "transform_layer.cc",
