--- a/engine/src/flutter/sky/compositor/BUILD.gn
+++ b/engine/src/flutter/sky/compositor/BUILD.gn
@@ -14,8 +14,6 @@ source_set("compositor") {
     "clip_rrect_layer.h",
     "color_filter_layer.cc",
     "color_filter_layer.h",
-    "compositor_options.cc",
-    "compositor_options.h",
     "container_layer.cc",
     "container_layer.h",
     "instrumentation.cc",
@@ -34,8 +32,8 @@ source_set("compositor") {
     "picture_serializer.h",
     "raster_cache.cc",
     "raster_cache.h",
-    "statistics_layer.cc",
-    "statistics_layer.h",
+    "performance_overlay_layer.cc",
+    "performance_overlay_layer.h",
     "transform_layer.cc",
     "transform_layer.h",
   ]
