Trim unneeded depedendencies from sky/compositor
Now we just depend on Skia and Base, which makes the compositor easier
to understand.

Also, update our skia/ext/refptr.h to match the current version of the
code in Chromium. This version adds support for several useful C++11
patterns.

--- a/engine/src/flutter/sky/shell/BUILD.gn
+++ b/engine/src/flutter/sky/shell/BUILD.gn
@@ -6,6 +6,8 @@ source_set("common") {
   sources = [
     "gpu/ganesh_canvas.cc",
     "gpu/ganesh_canvas.h",
+    "gpu/picture_serializer.cc",
+    "gpu/picture_serializer.h",
     "rasterizer.cc",
     "rasterizer.h",
     "platform_view.cc",
