--- a/engine/src/flutter/sky/shell/BUILD.gn
+++ b/engine/src/flutter/sky/shell/BUILD.gn
@@ -37,6 +37,7 @@ source_set("common") {
     "//base:i18n",
     "//build/config/sanitizers:deps",
     "//dart/runtime:libdart",
+    "//flow",
     "//mojo/common",
     "//mojo/data_pipe_utils",
     "//mojo/message_pump",
@@ -48,7 +49,6 @@ source_set("common") {
     "//mojo/services/vsync/interfaces",
     "//services/asset_bundle:lib",
     "//skia",
-    "//sky/compositor",
     "//sky/engine",
     "//sky/engine/tonic",
     "//sky/engine/wtf",
