--- a/engine/src/flutter/sky/engine/public/sky/BUILD.gn
+++ b/engine/src/flutter/sky/engine/public/sky/BUILD.gn
@@ -5,10 +5,10 @@
 source_set("sky") {
   deps = [
     "//base",
+    "//flow",
     "//mojo/public/cpp/system",
     "//mojo/services/network/interfaces",
     "//skia",
-    "//sky/compositor",
     "//sky/engine/core",
     "//sky/engine/platform",
     "//sky/engine/wtf",
