JNI/Dart: support for more data types
* Conversion of all primitive types, wrapped Java objects, and nulls between Dart and Java
* A way to distinguish float arguments from doubles when calling Java methods
* Construction of a Dart JniClass from a Java class object

--- a/engine/src/flutter/sky/engine/bindings/jni/BUILD.gn
+++ b/engine/src/flutter/sky/engine/bindings/jni/BUILD.gn
@@ -6,6 +6,12 @@ source_set("jni") {
   sources = [
     "dart_jni.cc",
     "dart_jni.h",
+    "jni_array.cc",
+    "jni_array.h",
+    "jni_class.cc",
+    "jni_class.h",
+    "jni_object.cc",
+    "jni_object.h",
   ]
 
   deps = [
