Update to mojo 1d94b2f59b6021091afcc50642c88509473239a4

--- a/engine/src/flutter/mojo/dart/packages/mojo/sources.gni
+++ b/engine/src/flutter/mojo/dart/packages/mojo/sources.gni
@@ -20,6 +20,9 @@ package_mojo_bindings = [
   "lib/mojo/http_header.mojom.dart",
   "lib/mojo/service_provider.mojom.dart",
   "lib/mojo/url_response.mojom.dart",
+  "lib/mojo/bindings/types/mojom_files.mojom.dart",
+  "lib/mojo/bindings/types/mojom_types.mojom.dart",
+  "lib/mojo/bindings/types/service_describer.mojom.dart",
 ]
 
 package_mojo_sources = [
