--- a/engine/src/flutter/mojo/services/media/audio/interfaces/BUILD.gn
+++ b/engine/src/flutter/mojo/services/media/audio/interfaces/BUILD.gn
@@ -10,4 +10,8 @@ mojom("interfaces") {
     "audio_server.mojom",
     "audio_track.mojom",
   ]
+
+  deps = [
+    "../../common/interfaces",
+  ]
 }
