--- a/engine/src/flutter/mojo/services/mojo_services.gni
+++ b/engine/src/flutter/mojo/services/mojo_services.gni
@@ -25,6 +25,10 @@ mojo_services = [
   "//mojo/services/input_events/interfaces",
   "//mojo/services/keyboard/interfaces",
   "//mojo/services/location/interfaces",
+  "//mojo/services/log/interfaces",
+  "//mojo/services/media/audio/interfaces",
+  "//mojo/services/media/common/interfaces",
+  "//mojo/services/media/control/interfaces",
   "//mojo/services/native_support/interfaces",
   "//mojo/services/native_viewport/interfaces",
   "//mojo/services/navigation/interfaces",
