--- a/engine/src/flutter/mojo/services/media/common/interfaces/BUILD.gn
+++ b/engine/src/flutter/mojo/services/media/common/interfaces/BUILD.gn
@@ -7,8 +7,12 @@ import("$mojo_sdk_root/mojo/public/tools/bindings/mojom.gni")
 
 mojom("interfaces") {
   sources = [
+    "media_clock.mojom",
     "media_common.mojom",
+    "media_metadata.mojom",
     "media_pipe.mojom",
+    "media_state.mojom",
+    "media_transport.mojom",
     "media_types.mojom",
     "rate_control.mojom",
   ]
