Dart/JNI: support all field and array data types

--- a/engine/src/flutter/sky/engine/bindings/jni/BUILD.gn
+++ b/engine/src/flutter/sky/engine/bindings/jni/BUILD.gn
@@ -12,6 +12,8 @@ source_set("jni") {
     "jni_class.h",
     "jni_object.cc",
     "jni_object.h",
+    "jni_string.cc",
+    "jni_string.h",
   ]
 
   deps = [
